[project]
dependencies = [
  "fastapi[standard]",
  "sqlalchemy[asyncio]",
  "alembic",
  "asyncpg",
  "redis[hiredis]",
  "pydantic-settings",
  "python-jose[cryptography]",
  "httpx",
  "bcrypt>=5.0.0",
  "user-agents>=2.2.0",
  "typer>=0.15.0",
  "rich>=14.0.0",
]
name = "sniptw"
version = "0.1.0"
description = "A fast and simple URL shortener"
readme = "README.md"
requires-python = ">=3.14"

[project.scripts]
sniptw = "cli.sniptw:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
